# hackapet

./: .gitignore  .gitmodules
dari_test_scripts/ref_circuitpy/: boot_out.txt  code.py
pcb/v3/: .gitignore  hackapet_v2.kicad_pcb  hackapet_v2.kicad_prl  hackapet_v2.kicad_pro  hackapet_v2.kicad_sch
pets/Artic_Blast/: original.py  readme.md
pets/Care-o-Pet/: CREDITS.md  README.md  data.json  main.py  misc.py  requirements.txt
pets/Catch/: .gitignore  Main.py  PygameVersion.py  README.md  requirements.txt
pets/Duck_Dance_Revolution/: README.md  main.py
pets/EggsFall/: README.md
pets/I have a bullet 4 u/: PLEASE READ THIS PLEASE PLEASE PLEASE PLEASE.txt  main.py
pets/KawaiiPet/: README.md  main.py  requirements.txt  test.py
pets/MemoryBrain/: README.md  main.py
pets/MonkeyMayhem/: description.txt  main.py
pets/RawChicken/: main.py
pets/Slime_Train!/: Game.py  README.md
pets/YourPocketArcticFox/: README.md  code.py
pets/almanzo/: README.md  main.py  requirements.txt
pets/blob/: README.md
pets/bonnies_sweet_buffet/: README.md  main.py
pets/bread bounce/: README.md  main.py
pets/catcatch/: README.md  main.py  requirements.txt
pets/catch/: main.py
pets/colourbounce/: README.md  pyproject.toml
pets/colourbounce/colourbounce/: __main__.py
pets/croutonpet/: README.md  main.py  miyazaki-16.txt  readme.md  renderer.py
pets/eevee/: README.md  main.py  requirements.txt
pets/ferret/: README.md  main.py
pets/ghostty-pet/: README.md  ghostty.py  requirements.txt
pets/glitchfox/: README.md  main.py  requirements.txt
pets/pongpet/: pet.py
(+197 files in other folders)
